--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,10 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+  //butterKnife 要单独依赖一次 要不找不到View
+  api 'com.jakewharton:butterknife:8.4.0'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
   implementation project(':gsdUtils')
 }
