--- a/gsdUtils/build.gradle
+++ b/gsdUtils/build.gradle
@@ -31,6 +31,8 @@ dependencies {
   api 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
   api 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'
   api 'com.android.support:design:27.1.0'
+
+  /*ButterKnife*/
   api 'com.jakewharton:butterknife:8.4.0'
   annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
   api 'com.squareup.okhttp3:okhttp:3.8.0'
