--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,11 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <activity android:name=".MainActivity"></activity>
+    <activity
+        android:name=".MainActivity"
+        android:configChanges="orientation|screenSize|keyboard|keyboardHidden|smallestScreenSize"
+        android:launchMode="singleInstance"
+        android:screenOrientation="portrait" />
 
     <!--<service-->
     <!--android:name=".service.CustomNLS"-->
