--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jianwu.commercialpay">
 
+
+  <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" />
   <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
   <application
       android:name=".APPApplication"
       android:allowBackup="true"
@@ -32,17 +35,19 @@
         android:screenOrientation="portrait" />
 
     <!--<service-->
-    <!--android:name=".service.CustomNLS"-->
-    <!--android:label="@string/app_name"-->
-    <!--android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">-->
-    <!--<intent-filter>-->
-    <!--<action android:name="android.service.notification.NotificationListenerService" />-->
-    <!--</intent-filter>-->
+        <!--android:name=".service.CustomNLS"-->
+        <!--android:label="@string/app_name"-->
+        <!--android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">-->
+      <!--<intent-filter>-->
+        <!--<action android:name="android.service.notification.NotificationListenerService" />-->
+      <!--</intent-filter>-->
     <!--</service>-->
 
     <service
         android:name=".service.NotificationCaptureByAccessibility"
-        android:label="辅助功能"
+        android:enabled="true"
+        android:exported="true"
+        android:label="商户接单服务"
         android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
       <intent-filter>
         <action android:name="android.accessibilityservice.AccessibilityService" />
