--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
         android:launchMode="singleInstance"
         android:screenOrientation="portrait" />
 
+    <activity
+        android:name=".base.WebViewActivity"
+        android:configChanges="orientation|screenSize|keyboard|keyboardHidden|smallestScreenSize"
+        android:launchMode="singleInstance"
+        android:screenOrientation="portrait" />
     <!--<service-->
         <!--android:name=".service.CustomNLS"-->
         <!--android:label="@string/app_name"-->
@@ -47,7 +52,7 @@
         android:name=".service.NotificationCaptureByAccessibility"
         android:enabled="true"
         android:exported="true"
-        android:label="商户接单服务"
+        android:label="@string/accessibility_description"
         android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
       <intent-filter>
         <action android:name="android.accessibilityservice.AccessibilityService" />
