--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
     <activity
         android:name=".MainActivity"
         android:configChanges="orientation|screenSize|keyboard|keyboardHidden|smallestScreenSize"
-        android:launchMode="singleInstance"
+        android:launchMode="singleTop"
         android:screenOrientation="portrait" />
 
     <activity
